# servicepoint-simulator

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  servicepoint-simulator.nix  shell.nix
.github/workflows/: rust.yml
src/: cli.rs  command_executor.rs  cp437_font.rs  execute_command.rs  font.rs  font_renderer.rs  gui.rs  gui_window.rs  main.rs  protocol.rs  static_font.rs  udp_server.rs  upd_loop.rs
