[package]
name = "servicepoint-simulator"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[dependencies]
# basics
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
# for drawing pixels onto the surface of the window
pixels = "0.14"
# I should not need this as a direct dependency, but then I cannot spell the types needed to use font-kit...
pathfinder_geometry = "0.5.1"
font-kit = "0.14.2"

[dependencies.servicepoint]
version = "0.12.0"
features = ["all_compressions"]

[dependencies.winit]
version = "0.30"
features = ["rwh_05"]
default-features = true

