[package]
name = "servicepoint-simulator"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[dependencies]
# basics
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

# package parsing
servicepoint = { version = "0.13.0", features = ["all_compressions"] }

# font rendering
font-kit = "0.14.2"
# I should not need this as a direct dependency, but then I cannot spell the types needed to use font-kit...
pathfinder_geometry = "0.5.1"

# for opening a window
winit = "0.30.8"
# for drawing pixels onto the surface of the window
softbuffer = "0.4.6"
