[package]
name = "servicepoint-simulator"
version = "0.2.2"
edition = "2021"
publish = true
license = "GPL-3.0-or-later"
keywords = ["cccb", "cccb-servicepoint", "cli"]
description = "A simulator for the Service Point display."
homepage = "https://git.berlin.ccc.de/servicepoint/servicepoint-simulator"
repository = "https://git.berlin.ccc.de/servicepoint/servicepoint-simulator"
readme = "README.md"
rust-version = "1.80.0"
resolver = "2"

[dependencies]
# basics
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

# package parsing
servicepoint = { features = ["all_compressions"], version = "0.15.1" }

# font rendering
font-kit = "0.14.2"
# I should not need this as a direct dependency, but then I cannot spell the types needed to use font-kit...
pathfinder_geometry = "0.5.1"

# for opening a window
winit = "0.30"
# for drawing pixels onto the surface of the window
softbuffer = "0.4.6"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
